--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,4 +14,4 @@ services:
       TZ: Europe/London
     volumes:
       - /containers/sabnzbd:/config
-      - /downloads:/downloads
+      - /tank/downloads:/tank/downloads
