--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,3 +23,4 @@ services:
       - /tank/media/tv:/tank/media/tv
       - /tank/media/music:/tank/media/music
       - /tank/media/xxx:/tank/media/xxx
+      - /tank/media/audiobooks:/tank/media/audiobooks
