Revert "Remove a volume"
This reverts commit 94bb574321af8d7930951e4b705f6956db234966.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,3 +20,4 @@ services:
       - /tank/media/movies:/tank/media/movies
       - /tank/media/tv:/tank/media/tv
       - /tank/media/music:/tank/media/music
+      - /tank/media/xxx:/tank/media/xxx
