--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,9 @@ services:
       traefik.http.routers.sabnzbd.middlewares: sabnzbd-ipallowlist
       traefik.http.middlewares.sabnzbd-ipallowlist.ipallowlist.sourcerange: >
         2a00:23c8:bda0:b310::/64,
-        10.10.0.0/16
+        10.10.0.0/16,
+        fdff:0205:2005::/123,
+        172.16.255.0/27
     volumes:
       - /containers/sabnzbd:/config
       - /downloads:/downloads
