Use main IP allow list

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,12 +14,7 @@ services:
       traefik.enable: true
       traefik.http.services.sabnzbd.loadbalancer.server.port: 8090
       traefik.http.routers.sabnzbd.rule: Host(`sabnzbd`)
-      traefik.http.routers.sabnzbd.middlewares: sabnzbd-ipallowlist
-      traefik.http.middlewares.sabnzbd-ipallowlist.ipallowlist.sourcerange: >
-        2a00:23c8:bda0:b310::/64,
-        10.10.0.0/16,
-        fdff:0205:2005::/123,
-        172.16.255.0/27
+      traefik.http.routers.sabnzbd.middlewares: trusted-ipallowlist
     volumes:
       - /containers/sabnzbd:/config
       - /downloads:/downloads
