Revert "Use host networking so that IPv6 servers are reachable"
This reverts commit 45cd7faa85cb3a1c0204d4b1a965251ce2338fbd.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,8 @@ services:
     image: ghcr.io/hotio/sabnzbd
     container_name: sabnzbd
     restart: unless-stopped
-    network_mode: host
+    ports:
+      - 8090:8080
     environment:
       WEBUI_PORTS: 8090
       PUID: 991
