Revert "Remove label"
This reverts commit 8f428783be869220268647751301ee3b9e8e14bb.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       TZ: Europe/London
     labels:
       traefik.enable: true
+      traefik.http.services.sabnzbd.loadbalancer.server.port: 8090
       traefik.http.routers.sabnzbd.rule: Host(`sabnzbd`)
       traefik.http.routers.sabnzbd.middlewares: trusted-ipallowlist
     volumes:
